2005-02-08  Alexander Gottwald  <ago at freedesktop dot org>

	* winkeybd.h:
	* winkeynames.h:
	Backout ABNT2 and HK_Toggle fix since it broke keys F1 and F4. 

2005-02-07  Alexander Gottwald  <ago at freedesktop dot org>

	* winlayouts.h:
	* winconfig.c:
	Moved keyboard layout table to external file.

2005-02-02  Alexander Gottwald  <ago at freedesktop dot org>

	* wincreatewnd.c:
	Force ShowWindow if XWin was started via run.exe. Fixes mainwindow
	not showing bug

2005-01-27  Alexander Gottwald  <ago at freedesktop dot org>

	* winmultiwindowwindow.c
	* winmultiwindowwndproc.c:
	Create windows with SWP_NOACTIVATE flag (updated) (Kensuke Matsuzaki)

2005-01-27  Alexander Gottwald  <ago at freedesktop dot org>

	* winmultiwindowwndproc.c:
	Fixes for window ordering problem (updated) (Kensuke Matsuzaki)

2005-01-27  Alexander Gottwald  <ago at freedesktop dot org>

	* winconfig.c:
	Added hungarian keyboard layout.

2005-01-27  Alexander Gottwald  <ago at freedesktop dot org>

	* winmultiwindowwindow.c
	* winmultiwindowwndproc.c:
	Backout last change. There was a window focus regression

2005-01-24  Alexander Gottwald  <ago at freedesktop dot org>

	* winmultiwindowwindow.c
	* winmultiwindowwndproc.c:
	Fixes for window ordering problem (Kensuke Matsuzaki)

2005-01-11  Alexander Gottwald  <ago at freedesktop dot org>

	* XWin.man:
	Document the -silent-dup-error switch

2005-01-11  Alexander Gottwald  <ago at freedesktop dot org>

	* winkeyhook.c:
	Do not grab ALT-TAB when window is in multiwindow mode
	
2005-01-10  Alexander Gottwald  <ago at freedesktop dot org>

	* winkeybd.h
	* winkeynames.h:
	Adjust keysyms for  Hiragana_Katakana toggle and backslash/underscore
	on Japanese and ABNT2 keyboards

2005-01-10  Alexander Gottwald  <ago at freedesktop dot org>

	* winkeybd.h
	* winkeyhook.c
	* winwndproc.c:
	Make keyhook feature work in multiwindowmode too
	Hook windows keys

2005-01-06  Alexander Gottwald  <ago at freedesktop dot org>

	* winmultiwindowclass.c: